Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/Parens3.out
Parens3.java:12:5: compiler.err.not.stmt
Parens3.java:12:10: compiler.err.expected: ';'
2 errors
